增加quartz例子